[package]
name = "niffler"
version = "0.1.0"
authors = ["Peter-Jan Gootzen <peterjan@gootzen.net>"]
edition = "2018"

[dependencies]
bootloader = "0.8.2"
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.7.5"

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04"]
test-success-exit-code = 33         # (0x10 << 1) | 1
